--- a/assignments/assignment1/Makefile
+++ b/assignments/assignment1/Makefile
@@ -32,6 +32,19 @@ matrix: matrix.cu matrix_funcs.o matrix.h
 matrix_funcs.o: matrix_funcs.cu
 	$(NVCC) -c $@ $< 
 
+.PHONY:
+	clean test
 
 clean:
-	-$(DEL_FILE) $(OBJECTS) $(TARGET)
+	$(DEL_FILE) $(OBJECTS) $(TARGET)
+
+test:
+	echo "/*   N=M=1000   */\n\n" > output
+	./matrix -n 1000 -m 1000 -t >> output
+	echo "/*   N=M=5000   */\n\n" >> output
+	./matrix -n 5000 -m 5000 -t >> output
+	echo "/*   N=M=10000   */\n\n" >> output
+	./matrix -n 10000 -m 10000 -t >> output
+	echo "/*   N=M=25000   */\n\n" >> output
+	./matrix -n 25000 -m 25000 -t >> output
+	 
