--- a/assignments/assignment2/single/Makefile
+++ b/assignments/assignment2/single/Makefile
@@ -12,7 +12,7 @@ OPT = -O3
 #DEFINES		= -DWITH_OPENMP
 CFLAGS		= -W -Wall -std=c++17 $(PARALLEL) $(DEFINES)
 CXXFLAGS	= -O3 -finline-functions -ffast-math -fomit-frame-pointer -funroll-loops -W -Wall 
-NVCCFLAGS	= -O2 --use_fast_math -arch=sm_35 -Wno-deprecated-gpu-targets -lineinfo #--ptxas-options=-v
+NVCCFLAGS	= --use_fast_math -arch=sm_35 -Wno-deprecated-gpu-targets -lineinfo #--ptxas-options=-v
 
 LIBS		= $(PARALLEL)
 INCPATH		= /usr/include/
@@ -44,7 +44,7 @@ run: radiator
 	./radiator -n 1000 -m 1000 -p 1000
 
 prof: radiator
-	nvprof ./radiator -c -n 15360 -m 15360 -p 1000
+	./radiator -c -n 15360 -m 15360 -p 500 -t
 
 p=1
 
